// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show a success notification 1`] = `
Array [
  Object {
    "text": "Publishing Process. This may take some time.",
    "type": "hint",
  },
]
`;

exports[`should show an error message 1`] = `
Array [
  "errorMessage",
]
`;

exports[`should show different text depending on the republish prop 1`] = `
<Modal
  className="PublishModal"
  onClose={[MockFunction]}
  onConfirm={[Function]}
  open="processId"
>
  <Component>
    Publishing Process
  </Component>
  <Component>
    <p>
      Published Event Based Processes will be available to use in Reports by selected users.
    </p>
    <div
      className="permission"
    >
      <h4>
        Who can use this process?
      </h4>
      Private - Only you
      <ForwardRef(Button)
        onClick={[Function]}
        variant="link"
      >
        Change
        ...
      </ForwardRef(Button)>
    </div>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="close"
      disabled={false}
      onClick={[MockFunction]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      color="blue"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      Publish
    </ForwardRef(Button)>
  </Component>
</Modal>
`;

exports[`should show different text depending on the republish prop 2`] = `
<Modal
  className="PublishModal"
  onClose={[MockFunction]}
  onConfirm={[Function]}
  open="processId"
>
  <Component>
    Re-Publishing Process
  </Component>
  <Component>
    <p>
      Re-Publishing will update data in all associated Reports.
    </p>
    <div
      className="permission"
    >
      <h4>
        Who can use this process?
      </h4>
      Private - Only you
      <ForwardRef(Button)
        onClick={[Function]}
        variant="link"
      >
        Change
        ...
      </ForwardRef(Button)>
    </div>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="close"
      disabled={false}
      onClick={[MockFunction]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      color="blue"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      Publish
    </ForwardRef(Button)>
  </Component>
</Modal>
`;

exports[`should show that access is granted if there are more than one user 1`] = `
<div
  className="permission"
>
  <h4>
    Who can use this process?
  </h4>
  User access granted
  <ForwardRef(Button)
    onClick={[Function]}
    variant="link"
  >
    Change
    ...
  </ForwardRef(Button)>
</div>
`;
